--- a/archives.html
+++ b/archives.html
@@ -14,15 +14,20 @@
         <header id="banner" class="body">
                 <h1><a href="/">Learning Deep </a></h1>
                 <nav><ul>
-                    <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/useful-tools.html">Useful Tools</a></li>
+                    <li><a href="/category/deep-learning.html">Deep Learning</a></li>
+                    <li><a href="/category/tools.html">Tools</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Learning Deep</h1>
 
 <dl>
-    <dt>Fri 03 December 2010</dt>
-    <dd><a href="/my-first-review.html">My First Review</a></dd>
+    <dt>Sun 28 February 2016</dt>
+    <dd><a href="/basis-of-deep-learning.html">Basis of Deep Learning</a></dd>
+    <dt>Sun 28 February 2016</dt>
+    <dd><a href="/pelican-for-academic-writing.html">pelican for academic writing</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
