--- a/authors.html
+++ b/authors.html
@@ -14,14 +14,17 @@
         <header id="banner" class="body">
                 <h1><a href="/">Learning Deep </a></h1>
                 <nav><ul>
-                    <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/useful-tools.html">Useful Tools</a></li>
+                    <li><a href="/category/deep-learning.html">Deep Learning</a></li>
+                    <li><a href="/category/tools.html">Tools</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Learning Deep</h1>
     <ul>
-        <li><a href="/author/leaf.html">Leaf</a> (1)</li>
+        <li><a href="/author/leaf.html">Leaf</a> (2)</li>
     </ul>
 </section>
 
