--- a/categories.html
+++ b/categories.html
@@ -14,11 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Learning Deep </a></h1>
                 <nav><ul>
-                    <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/useful-tools.html">Useful Tools</a></li>
+                    <li><a href="/category/deep-learning.html">Deep Learning</a></li>
+                    <li><a href="/category/tools.html">Tools</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="/category/review.html">Review</a></li>
+    <li><a href="/category/deep-learning.html">Deep Learning</a></li>
+    <li><a href="/category/tools.html">Tools</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
