--- a/pages/useful-tools.html
+++ b/pages/useful-tools.html
@@ -31,8 +31,8 @@
 <li>
 <p>support python, R, and many other language.</p>
 </li>
-<li>streaming, offline, export to different formats (png, pdf, etc.)</li>
-<li></li>
+<li>streaming, offline, export to different formats (png, pdf, etc.)
+2.</li>
 </ol>
 <h1>Cheat Online</h1>
 <ol>
